--- a/appendix.tex
+++ b/appendix.tex
@@ -292,7 +292,7 @@ $p\in(0,1$), then $(pr,p)\in\prodp(P\paral Q)$ iff
     \begin{equation}\label{eq:lempar9}
       \begin{split}
         \eqref{eq:lempar8} =
-        \sum\lbag r_{1}\cdot r_{2}\ |\ (pr_{1},r_{1})\in\prodp(Q),\ (pr_{2},p_{2})\in\prodp(P),\
+        \sum\lbag r_{1}\cdot r_{2}\ |\ (pr_{1},r_{1})\in\prodp(Q),\\ (pr_{2},p_{2})\in\prodp(P),\
         pr = pr_{1}\cup pr_{2}\rbag
       \end{split}
     \end{equation}
