--- a/macros.tex
+++ b/macros.tex
@@ -551,3 +551,4 @@ literate={\$}{{\textcolor{red}{\$}}}1
 \tikzstyle{optional}=[dashed,fill=gray!50]
 \lstset{language=Ruby,frame=trBL,basicstyle=\ttfamily\fontsize{6}{8}\selectfont}
 
+\newcommand\height{\ensuremath{\mathsf{h}}}
