--- a/main.tex
+++ b/main.tex
@@ -78,7 +78,7 @@
 \input{introduction}
 \input{related_work}
 
-\input{intro_fodaa}
+%\input{intro_fodaa}
 
 \input{syntax}
 \input{operational}
@@ -105,4 +105,3 @@
 %%% mode: latex
 %%% TeX-master: t
 %%% End:
-
