--- a/testing.tex
+++ b/testing.tex
@@ -106,8 +106,8 @@ portion of them requiring a processing time between 20 and 38 milliseconds.
 	\end{minipage}
 	\hfill
 	\begin{minipage}[b]{0.48\textwidth}
-		\includegraphics[width=\textwidth]{plot_probs_probs_sorted.eps}
-	\caption{Probabilistic analysis for a 1500 features model, decreasingly sorted.}\label{fig:plot:probs:probs:sorted}
+		\includegraphics[width=\textwidth]{FeatureModel1500Features_histogram.eps}
+	\caption{Probabilistic histogram for processing a 1500 features model.}\label{fig:plot:probs:probs:sorted}
 	\end{minipage}
 \end{figure}
 
