--- a/testing.tex
+++ b/testing.tex
@@ -3,7 +3,12 @@
 \section{Empirical study}
 \label{sec:stat:impl}
 
-In the field of \SPLs\ analysis, the use of probabilistic methods carries two practical applications. The first one consists in calculating the probability of having that feature in a specific product. This allows us to efficiently assign resources by prioritizing those features with a high probability of being included into the \SPL. The second application consists in estimating the testing coverage in the product line, which allows us to calculate those products that can be generated in the testing process.
+In the field of \SPLs\ analysis, the use of probabilistic methods carries two practical applications.
+The first one consists in calculating the probability of having a feature in a specific product.
+This allows us to efficiently assign resources by prioritizing those features with a high probability
+of being included into the \SPL.
+The second application consists in estimating the testing coverage in the product line,
+which allows us to calculate those products that can be generated in the testing process.
 
 This section presents the results obtained from an experimental study to show the applicability and scalability of our
 approach.
@@ -15,14 +20,14 @@ of this tool is available at the main project site
 \footnote{\url{http://ccamacho.github.io/phd/resources/03_splap.tar}}.
 The experiments have been executed in a computer with the following features: Intel(R) Xeon(R) Quad-Core CPU E5-2670 @ 2.60GHz, 64 GB of RAM memory and Centos 7 Operating System.
 
-%The simulations were executed based on the implementation of the denotational
-%semantics for the probabilistic extension. 
 \subsection{Model analysis}
 \label{sec:stat:impl:model:analysis}
 
-Firstly, we have carried out an experiment to show the computing time required to calculate the probability of having
+Firstly, we have carried out an experiment to
+show the computing time required to calculate the probability of having
 each feature in a product. In order to run this experiment, a variability model consisting of
-1500 features has been used. This variability model
+1500 features has been used.
+This variability model
 was generated using BeTTy~\cite{SeguraHBC11}.
 In figure~\ref{fig:plot:betty:params} is displayed the parameters used in the feature models
 generator.
@@ -81,7 +86,10 @@ have a random weight, making impossible to correlate the results with our model 
         \caption{Computing time analysis for a model consisting of 1500 features.}\label{fig:plot:probs:times}
 \end{figure}
 
-Figure~\ref{fig:plot:probs:times} shows the obtained results from this experiment, where the x-axis depicts the ID of each generated feature and the y-axis represents the time required to calculate the probability of having a feature in a product.
+Figure~\ref{fig:plot:probs:times} shows the obtained
+results from this experiment, where the x-axis depicts
+the ID of each generated feature and the y-axis represents
+the time required to calculate the probability of having a feature in a product.
 %In this case, the total time to obtain the probability for all the features is linear with respect to the total length of the analyzed term
 %\mncomment{Que quiere decir esto? Suena raro porque yo esperaria complejidad $O(2^n)$ siendo $n$ el numero de probabilidades que salen en el termino. Pero vamos, que yo no  se mucho de complejidad!}\ccomen{Es cierto, no lo demostramos ni lo analizamos}.
 %\acomen{Yo simplemente quitaría esa frase, lo de que la complejidad es lineal}
@@ -113,25 +121,49 @@ portion of them requiring a processing time between 20 and 38 milliseconds.
 
 
 Figure~\ref{fig:plot:probs:probs} shows the probability of each feature in the analyzed model, where the $x$-axis
-represents the feature ID and the $y$-axis represents the probability. For the sake of clarity, we provide a chart by sorting the features using its probability as sorting criteria (see Figure~\ref{fig:plot:probs:probs:sorted}).
-This chart clearly shows that there exist different groups of features having a similar probability.
+represents the feature ID and the $y$-axis represents the probability.
+Figure~\ref{fig:plot:probs:probs:sorted} represents a histogram of the calculated probabilities for a better
+readability of the results. This chart clearly shows that there exist
+different groups of features having a similar probability in this case the most part of the features probabilities are
+between 0.7 and 0.8.
 %
 In this case, there are 450 features with, at least, a probability equal to 0.75 of being in a final product. As a conclusion,
 this analysis might allow us to establish that by testing only the 30\% of the software product line components, we can ensure that
-%the features
-%included in,
 at least, the 75\% of the generated products, are tested.
+
+
+It is important to remark the relationship between the probabilities defined in BeTTy and the probabilities calculated in the model.
+For instance, if BeTTy is configured to generate mandatory features with a probability of 0.2 in a model, that will mean that
+those features will be presented in the model as mandatory with a probability of 0.2 and nothing else.
+
+The probability of those mandatory features in the model is not related directly with the probability of those features being part
+of let's say, the 20\% of the products, mostly, because it depends on the position of the features in the model for the
+products generation. In which case we can not assume that these 20\% of the features will have a probability of 1 for being installed
+in the products.
+
 
 \subsection{Performance analysis}
 \label{sec:stat:impl:performance:analysis}
 
-Secondly, an experiment to analyze the scalability of our approach have been carried out. We are interested in investigating both the execution time and the amount of memory required for processing a model, when the number of features increases. Hence, we use different configurations for creating a wide spectrum of variability models, which are randomly generated, using a different number of features that ranges from 1,000 to 10,000. Specifically for each case, that is, given a configuration and a number of features, a model is randomly generated 30 times. Additionally, for each model, 100 features are 
-randomly selected and, for each one, both the processing time and memory required to calculate its probability are analyzed.
+Secondly, an experiment to analyze the scalability of our approach
+have been carried out. We are interested in investigating both the
+execution time and the amount of memory required for processing a model,
+when the number of features increases.
+Hence, we use different configurations for creating a wide
+spectrum of variability models, which are randomly generated,
+using a different number of features that ranges from 1.000 to 10.000 (in increments of one thousand per experiment).
+
+Specifically for each case, that is, given a configuration and a number of features,
+a model is randomly generated 30 times.
+Additionally, for each model, 100 features are 
+randomly selected and, for each one, both the processing time and memory
+required to calculate its probability are analyzed.
 
 
 
-Table~\ref{scalaExperiment} shows the used configurations to generate the variability models for this experiment, 
-where \textit{Conf. ID} represents the configuration ID, 
+Table~\ref{scalaExperiment} shows the configurations used to generate the
+variability models for this part of the empirical study, 
+where each configuration represents the set of probabilities chosen for each operator across the three experiments, 
  \textit{Mandatory} represents the probability of having a mandatory feature, 
  \textit{Optional} represents the probability of having an optional feature,
  \textit{Choose-one} represents the probability of having a feature in a \textit{choose-one} relation and
@@ -141,62 +173,75 @@ where \textit{Conf. ID} represents the configuration ID,
 \centering
 \begin{tabular}{|l|c|c|c|c|}
 \hline
-\textbf{Conf. ID} & \textbf{Mandatory} &  \textbf{Optional} &  \textbf{Choose-one} &  \textbf{Conjunction} \\ \hline
-	Config\_1		& 0.69	& 0.15	& 0.15	& 0.01 	\\ \hline
-	Config\_2		& 0.5		& 0.15 	& 0.15	& 0.2		\\ \hline
-	Config\_3		& 0.2		& 0.15 	& 0.15 	& 0.5 	\\ \hline
+\textbf{Configuration} & \textbf{Mandatory} &  \textbf{Optional} &  \textbf{Choose-one} &  \textbf{Conjunction} \\ \hline
+	\textit{1}		& 0.69	& 0.15	& 0.15	& 0.01 	\\ \hline
+	\textit{2}		& 0.5		& 0.15 	& 0.15	& 0.2		\\ \hline
+	\textit{3}		& 0.2		& 0.15 	& 0.15 	& 0.5 	\\ \hline
 \end{tabular}
 \caption{Configuration of the scalability experiments.}
 \label{scalaExperiment}
 \end{table}
 
-Figure~\ref{fig:plot:probs:boxplot_0_1} and figure~\ref{fig:plot:probs:boxplot_0_1_mem} show the execution time and the required amount of memory, respectively, for processing the variability models generated using \textit{Config\_1}. In these models, only 1\% of the features have a conjunction relation. In general, the processing time when the number of features increases is linear. Only in few cases, where the number of features ranges from 5000 to 8000, the results provide anomalous values. This is mainly caused by the random nature of the generated models. On the contrary, the memory usage depicts that there are several groups where the memory usage remains constant, one group of models containing between 3,000 and 5,000 features and other group of models containing between 7,000 and 10,000 features. In summary, our implementation shows good scalability results for processing the models generated using \textit{Config\_1}: it requires, in the worst case scenario, 215 ms and 0.32 GB of RAM to process the model.
+The reason of the values for Table~\ref{scalaExperiment} is that we have fixed the values of the \textit{Optional}
+and \textit{Choose-one} features so they will remain the same across all the experiments so they should not interfere.
+Then we started with a
+very low probability of having a \textit{Conjunction} relationship in the model, in this case for the
+first experiment will be 0.01, then we increased the probability of the \textit{Conjunction} relationship to 0.2 to
+end with 0.5. This is mostly to show the impact of the \textit{Conjunction} relationship in the processing of the models.
+
+Figure~\ref{fig:plot:probs:boxplot_0_1} and figure~\ref{fig:plot:probs:boxplot_0_1_mem} show the execution time and the required amount of memory, respectively, for processing the variability models generated using the \textit{configuration 1}. In these models, only 1\% of the features have a conjunction relation. In general, the processing time when the number of features increases is linear. Only in few cases, where the number of features ranges from 5000 to 8000, the results provide anomalous values. This is mainly caused by the random nature of the generated models (30 for each case). On the contrary, the memory usage depicts that there are several groups where the memory usage remains constant, one group of models containing between 3,000 and 5,000 features and other group of models containing between 7,000 and 10,000 features. In summary, our implementation shows good scalability results for processing the models generated using the \textit{configuration 1}: it requires, in the worst case scenario, 215 ms and 0.32 GB of RAM to process the model.
 
 \begin{figure}[h]
 	\centering
 	\begin{minipage}[b]{0.48\textwidth}
 		\includegraphics[width=\textwidth]{boxplot_0_1.eps}
-		\caption{Execution time for processing models generated with \textit{Config\_1}.}\label{fig:plot:probs:boxplot_0_1}
+		\caption{Execution time for processing models generated with the \textit{configuration 1}.}\label{fig:plot:probs:boxplot_0_1}
 	\end{minipage}
 	\hfill
 	\begin{minipage}[b]{0.48\textwidth}
 		\includegraphics[width=\textwidth]{boxplot_0_1_mem.eps}
-		\caption{Memory usage for processing models generated with \textit{Config\_1}.}\label{fig:plot:probs:boxplot_0_1_mem}
+		\caption{Memory usage for processing models generated with the \textit{configuration 1}.}\label{fig:plot:probs:boxplot_0_1_mem}
 	\end{minipage}
 \end{figure}
 
-Figure~\ref{fig:plot:probs:boxplot_0_2} and figure~\ref{fig:plot:probs:boxplot_0_2_mem} show the results for analyzing the models generated using \textit{Config\_2}. It is important to remark that 20\% of the features in the generated models have a conjunction relation. In this case, both the execution time and memory usage for processing a model when the number of features increases are exponential. These charts clearly show a turning point when the model reaches 6,000 features and, therefore, the required processing time and  memory are significantly lower for those models that do not reach 6,000 features. However, the requirements to process the model in the worst case scenario, that is, using a model containing 10,000 features, are 300 sec. and 3.84 GB of RAM memory, which are acceptable.
+Figure~\ref{fig:plot:probs:boxplot_0_2} and figure~\ref{fig:plot:probs:boxplot_0_2_mem} show the results for analyzing the models generated using the \textit{configuration 2}. It is important to remark that 20\% of the features in the generated models have a conjunction relation. In this case, both the execution time and memory usage for processing a model when the number of features increases are exponential. These charts clearly show a turning point when the model reaches 6,000 features and, therefore, the required processing time and  memory are significantly lower for those models that do not reach 6,000 features. However, the requirements to process the model in the worst case scenario, that is, using a model containing 10,000 features, are 300 sec. and 3.84 GB of RAM memory, which are acceptable.
 
 \begin{figure}[h]
 	\centering
 	\begin{minipage}[b]{0.48\textwidth}
 		\includegraphics[width=\textwidth]{boxplot_0_2.eps}
-		\caption{Execution time for processing models generated with \textit{Config\_2}.}\label{fig:plot:probs:boxplot_0_2}
+		\caption{Execution time for processing models generated with the \textit{configuration 2}.}\label{fig:plot:probs:boxplot_0_2}
 	\end{minipage}
 	\hfill
 	\begin{minipage}[b]{0.48\textwidth}
 		\includegraphics[width=\textwidth]{boxplot_mem.eps}
-		\caption{Memory usage for processing models generated with \textit{Config\_2}.}\label{fig:plot:probs:boxplot_0_2_mem}
+		\caption{Memory usage for processing models generated with the \textit{configuration 2}.}\label{fig:plot:probs:boxplot_0_2_mem}
 	\end{minipage}
 \end{figure}
 
-Figure~\ref{fig:plot:probs:boxplot_0_5} and figure~\ref{fig:plot:probs:boxplot_0_5_mem} show the results for processing the models generated using \textit{Config\_3}. In this case, half of the features in the model have a conjunction relation. Similarly to the previous experiment, these charts show that both the execution time and the memory usage for processing a model when the number of features increases are exponential. In the obtained results we can observe the same turning point detected in the previous models generated using \textit{Config\_2}, that is, when the model reaches 6,000 features. Model processing requirements, that is, execution time and memory usage, grow much faster for these models than for those based on previous configurations. Also, it is important to notice that the models containing 9,000 and 10,000 features cannot be processed due to memory limitations.
+Figure~\ref{fig:plot:probs:boxplot_0_5} and figure~\ref{fig:plot:probs:boxplot_0_5_mem} show the results for processing the models generated using the \textit{configuration 3}. In this case, half of the features in the model have a conjunction relation. Similarly to the previous experiment, these charts show that both the execution time and the memory usage for processing a model when the number of features increases are exponential. In the obtained results we can observe the same turning point detected in the previous models generated using the \textit{configuration 2}, that is, when the model reaches 6,000 features. Model processing requirements, that is, execution time and memory usage, grow much faster for these models than for those based on previous configurations. Also, it is important to notice that the models containing 9,000 and 10,000 features cannot be processed due to memory limitations.
 
-Broadly speaking, these results show that increasing the number of features having a conjunction relation has a direct impact on the overall performance. In fact, increasing the number of features having a conjunction relation generates a combinatorial explosion that hampers the processing of models. First, the execution time to completely process a model significantly grows. Second, large amounts of memory are required to store those combinations. In some cases, using large models with a high percentage of features having a conjunction relation may cause a bottleneck in the memory system. In fact, models generated using \textit{Config\_3} with 9,000 and 10,000 features cannot be processed using 64 GB of RAM.
+Broadly speaking, these results show that increasing the number of features having a conjunction relation has a direct impact on the overall performance. In fact, increasing the number of features having a conjunction relation generates a combinatorial explosion that hampers the processing of models. First, the execution time to completely process a model significantly grows. Second, large amounts of memory are required to store those combinations. In some cases, using large models with a high percentage of features having a conjunction relation may cause a bottleneck in the memory system. In fact, models generated using the \textit{configuration 3} with 9,000 and 10,000 features cannot be processed using 64 GB of RAM.
 
 
 \begin{figure}[h]
 	\centering
 	\begin{minipage}[b]{0.48\textwidth}
 		\includegraphics[width=\textwidth]{boxplot_0_5.eps}
-		\caption{Execution time for processing models generated with \textit{Config\_3}.}\label{fig:plot:probs:boxplot_0_5}
+		\caption{Execution time for processing models generated with the \textit{configuration 3}.}\label{fig:plot:probs:boxplot_0_5}
 	\end{minipage}
 	\hfill
 	\begin{minipage}[b]{0.48\textwidth}
 		\includegraphics[width=\textwidth]{boxplot_0_5_mem.eps}
-		\caption{Memory usage for processing models generated with \textit{Config\_3}.}\label{fig:plot:probs:boxplot_0_5_mem}
+		\caption{Memory usage for processing models generated with the \textit{configuration 3}.}\label{fig:plot:probs:boxplot_0_5_mem}
 	\end{minipage}
 \end{figure}
+
+Also the box plots from figure~\ref{fig:plot:probs:boxplot_0_1},
+figure~\ref{fig:plot:probs:boxplot_0_2} and figure~\ref{fig:plot:probs:boxplot_0_5}
+shows the group of results for the execution times based in quartiles as for each experiment
+we generated 30 models per class of models
+(30 models with 1.000 features, 30 models with 2.000 features until 10.000 features)
 
 
 
